--- a/app/src/main/res/layout/registro_tab_fragment.xml
+++ b/app/src/main/res/layout/registro_tab_fragment.xml
@@ -151,6 +151,7 @@
         android:id="@+id/btnRegistrarse"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/button_bg"
         app:layout_constraintWidth_percent=".8"
         app:layout_constraintVertical_bias=".7"
         android:text="@string/btn_registrarse"
