--- a/app/src/main/res/layout/item_categoria.xml
+++ b/app/src/main/res/layout/item_categoria.xml
@@ -6,9 +6,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="8dp"
     app:cardCornerRadius="@dimen/cornerRadius"
-    android:layout_margin="@dimen/margin">
+    android:layout_margin="@dimen/margin_cardview">
 
     <TextView
+        android:id="@+id/tv_nom_categoria"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/margin"
