--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_size">16sp</dimen>
     <dimen name="cornerRadius">8dp</dimen>
+    <dimen name="margin_cardview">5dp</dimen>
 </resources>
