--- a/app/src/main/res/layout/login_tab_fragment.xml
+++ b/app/src/main/res/layout/login_tab_fragment.xml
@@ -6,6 +6,7 @@
 
 
     <EditText
+
         android:id="@+id/email"
         android:layout_width="0dp"
         android:background="@drawable/et_text"
@@ -22,6 +23,7 @@
         app:layout_constraintTop_toTopOf="parent"
         />
     <EditText
+        android:inputType="textPassword"
         android:id="@+id/password"
         android:background="@drawable/et_text"
         android:textSize="16sp"
@@ -38,6 +40,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/email"
+
         />
 
     <Button
@@ -50,7 +53,7 @@
         android:text="@string/btn_login"
         android:textSize="@dimen/text_size"
         android:textStyle="bold"
-
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
