--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.TFC_DAM_TICKETS" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.TFC_DAM_TICKETS" parent="Theme.AppCompat.DayNight">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
+
+    <style name="Theme.TFC_DAM_TICKETS.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
 
     <style name="Theme.TFC_DAM_TICKETS" parent="Base.Theme.TFC_DAM_TICKETS" />
 </resources>
