--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
     <dimen name="text_size">16sp</dimen>
     <dimen name="cornerRadius">8dp</dimen>
     <dimen name="margin_cardview">5dp</dimen>
+    <dimen name="margin_btn">30dp</dimen>
+    <dimen name="title_text_size">40dp</dimen>
 </resources>
