--- a/app/src/main/res/layout/registro_tab_fragment.xml
+++ b/app/src/main/res/layout/registro_tab_fragment.xml
@@ -21,7 +21,7 @@
             android:id="@+id/etEmail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/et_text"
             android:hint="@string/email"
             android:paddingLeft="20dp"
@@ -170,6 +170,7 @@
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="16dp"
         app:layout_constraintStart_toStartOf="parent"
 
 
