--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,5 +9,6 @@
     <dimen name="cornerRadius">8dp</dimen>
     <dimen name="margin_cardview">5dp</dimen>
     <dimen name="margin_btn">30dp</dimen>
-    <dimen name="title_text_size">40dp</dimen>
+    <dimen name="title_text_size">40sp</dimen>
+    <dimen name="text_size_hint">12sp</dimen>
 </resources>
