--- a/app/src/main/res/layout/activity_nuevo_ticket.xml
+++ b/app/src/main/res/layout/activity_nuevo_ticket.xml
@@ -7,11 +7,24 @@
     android:padding="@dimen/margin"
     tools:context=".ActivityNuevoTicket">
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/etCat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint= "@string/cat_ticket"
+            android:text=" "/>
+    </com.google.android.material.textfield.TextInputLayout>
+
     <!-- Insertar Título -->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/etTitulo"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/etCat">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
