--- a/app/src/main/res/layout/activity_nuevo_ticket.xml
+++ b/app/src/main/res/layout/activity_nuevo_ticket.xml
@@ -16,8 +16,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint= "@string/titulo_ticket"
-                android:text=" " />
+                android:hint="@string/titulo_ticket" />
         </com.google.android.material.textfield.TextInputLayout>
 
     <!-- Insertar Descripción -->
@@ -30,7 +29,6 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=" "
                 android:hint="@string/descripcion_ticket" />
         </com.google.android.material.textfield.TextInputLayout>
 
