--- a/app/src/main/res/layout/registro_tab_fragment.xml
+++ b/app/src/main/res/layout/registro_tab_fragment.xml
@@ -5,6 +5,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btnRegistrarse"
+        android:layout_marginBottom="10dp">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -189,7 +196,7 @@
         </com.google.android.material.textfield.TextInputLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
+    </ScrollView>
 
     <Button
         android:id="@+id/btnRegistrarse"
