--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,15 +1,20 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.TFC_DAM_TICKETS" parent="Theme.AppCompat.DayNight">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-    </style>
 
-    <style name="Theme.TFC_DAM_TICKETS.NoActionBar">
+    <style name="Base.Theme.TFC_DAM_TICKETS" parent="Theme.AppCompat.DayNight"></style>
+
+    <style name="Theme.TFC_DAM_TICKETS.NoActionBar" parent="Base.Theme.TFC_DAM_TICKETS">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="actionOverflowButtonStyle">@style/MyOverflowButtonStyle</item>
     </style>
 
-
     <style name="Theme.TFC_DAM_TICKETS" parent="Base.Theme.TFC_DAM_TICKETS" />
+
+    <style name="MyOverflowButtonStyle" parent="Widget.AppCompat.ActionButton.Overflow">
+        <item name="android:tint">@android:color/white</item>
+    </style>
+
+    <style name="OverflowMenuStyle" parent="Widget.AppCompat.PopupMenu.Overflow">
+        <item name="android:textColor">@android:color/white</item>
+    </style>
 </resources>
